--- a/less/style_main.less
+++ b/less/style_main.less
@@ -2773,11 +2773,49 @@ body {
                     th:nth-child(2){
                         width: 65%;
                     }
-                    th:nth-child(3),td:nth-child(3){
+                    th:nth-last-child(1),td:nth-last-child(1){
                         border-right: 0px;
                     }
                     td:nth-child(3){
                         padding-right: 10px;
+                    }
+                }
+            }
+            table.price_tb{
+                thead{
+                    background: #f6f6f6;
+                }
+                
+                tr{
+                 
+                    th:nth-child(1){
+                        width: 10%;
+                    }
+                    th:nth-child(2){
+                        width:18%;
+                    }
+                    th:nth-child(3){
+                        width: 18%;
+                        border-right: 1px solid #d0d0d0; 
+                    }
+                    th:nth-child(4){
+                        width: 14%;
+                    }
+                    th:nth-child(5){
+                        width: 20%;
+                        
+                    }
+                    th:nth-child(6){
+                        width: 20%;
+                        border-right:0px solid #d0d0d0; 
+                    }
+                  
+                    td:nth-child(1){
+                    }td:nth-child(2){
+                    }
+                    td:nth-child(3){
+                        border-right: 1px solid #d0d0d0; 
+                        padding-right: 0px;
                     }
                 }
             }
